made sizing min of two values to eliminate overflow issue just before switches to mobile view

--- a/frontEnd/moop_city_front/src/components/MapGrid.css
+++ b/frontEnd/moop_city_front/src/components/MapGrid.css
@@ -1,7 +1,7 @@
 .gridContainer{
-    height: 90vh;
+    height: min(90vh, 90vw);
     /* width:90vw; */
-    width: 90vh;
+    width: min(90vh, 90vw);
     /* width: auto; */
     border: solid 3px;
     margin: auto;
